rule4be/k8s/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    app: rule4
    env: stage
