rule4be/k8s/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule4-stage
  namespace: stage
  labels:
    app: rule4
    env: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rule4
      env: stage
  template:
    metadata:
      labels:
        app: rule4
        env: stage
    spec:
      containers:
      - name: rule4-stage
        image: __IMAGE_NAME_WITH_TAG__
        ports:
        - containerPort: 8000
