rule4be/k8s/stage/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "rule4-stage-service"
  namespace: "stage"
  labels:
    app: "rule4"
    env: "stage"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8000
  selector:
    app: "rule4"
    env: "stage"
  type: "LoadBalancer"
  loadBalancerIP: ""
